// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator Render should set horizontal margins 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: rgb(0, 0, 0);
  font-size: 1.25rem;
  font-family: Roboto,-apple-system,Ubuntu,sans-serif;
  line-height: 1.75rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  margin-left: 1rem;
  margin-right: 1rem;
  border-width: 0;
  border-color: rgb(241, 241, 241);
  border-style: solid;
  border-bottom-width: 1px;
  width: auto;
}

<div
    class="emotion-0"
  >
    <hr
      aria-orientation="horizontal"
      class="emotion-1"
      data-browk-ui-element="SEPARATOR"
      width="auto"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator Render should set responsive horizontal margins 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: rgb(0, 0, 0);
  font-size: 1.25rem;
  font-family: Roboto,-apple-system,Ubuntu,sans-serif;
  line-height: 1.75rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
  border-width: 0;
  border-color: rgb(241, 241, 241);
  border-style: solid;
  border-bottom-width: 1px;
  width: auto;
}

@media screen and (min-width: 40em) {
  .emotion-1 {
    margin-left: 2.25rem;
    margin-right: 2.25rem;
  }
}

@media screen and (min-width: 52em) {
  .emotion-1 {
    margin-left: 4.5rem;
    margin-right: 4.5rem;
  }
}

<div
    class="emotion-0"
  >
    <hr
      aria-orientation="horizontal"
      class="emotion-1"
      data-browk-ui-element="SEPARATOR"
      width="auto"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator Render should set responsive vertical margins 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: rgb(0, 0, 0);
  font-size: 1.25rem;
  font-family: Roboto,-apple-system,Ubuntu,sans-serif;
  line-height: 1.75rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  margin-bottom: 0.25rem;
  margin-top: 0.25rem;
  border-width: 0;
  border-color: rgb(241, 241, 241);
  border-style: solid;
  border-left-width: 1px;
  height: auto;
}

@media screen and (min-width: 40em) {
  .emotion-1 {
    margin-bottom: 2.25rem;
    margin-top: 2.25rem;
  }
}

@media screen and (min-width: 52em) {
  .emotion-1 {
    margin-bottom: 4.5rem;
    margin-top: 4.5rem;
  }
}

<div
    class="emotion-0"
  >
    <hr
      aria-orientation="vertical"
      class="emotion-1"
      data-browk-ui-element="SEPARATOR"
      height="auto"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator Render should set vertical margins 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: rgb(0, 0, 0);
  font-size: 1.25rem;
  font-family: Roboto,-apple-system,Ubuntu,sans-serif;
  line-height: 1.75rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  margin-bottom: 2.25rem;
  margin-top: 2.25rem;
  border-width: 0;
  border-color: rgb(241, 241, 241);
  border-style: solid;
  border-left-width: 1px;
  height: auto;
}

<div
    class="emotion-0"
  >
    <hr
      aria-orientation="vertical"
      class="emotion-1"
      data-browk-ui-element="SEPARATOR"
      height="auto"
    />
  </div>
</DocumentFragment>
`;
